--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,38 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer base {
+  body {
+    font-family: var(--font-Satoshi), sans-serif;
+  }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+  h1,
+  h2,
+  h3 {
+    font-family: var(--font-IntegralCF), sans-serif;
+    font-weight: 700;
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  h1 {
+    @apply text-[36px]/[34px] md:text-[64px]/[64px];
+  }
+
+  h2 {
+    @apply text-[32px] md:text-[48px];
+  }
+
+  h3 {
+    @apply text-[40px] md:text-[48px];
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+@layer components {
+  .container {
+    @apply 2xl:max-w-[1240px] xl:max-w-[1240px];
+  }
+}
+
+.logo {
+  font-family: var(--font-IntegralCF), sans-serif;
+  text-box-trim: trim-end;
+  @apply text-[25px]/[25px] md:text-[32px]/[32px] font-bold;
 }
