--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,33 @@
   .container {
     @apply 2xl:max-w-[1240px] xl:max-w-[1240px];
   }
+
+  .burger-button {
+    @apply w-[20px] h-[16px] relative flex flex-col items-center justify-between;
+  }
+
+  .burger-button span {
+    width: 100%;
+    height: 2px;
+    border-radius: 10px;
+    background-color: black;
+    position: relative;
+    transform-origin: left;
+    transition: all 0.2s ease 0s;
+  }
+
+  .burger-button.active span:nth-child(2){
+    opacity: 0;
+  }
+
+  .burger-button.active span:nth-child(1){
+    transform: rotate(45deg);
+  }
+
+  .burger-button.active span:nth-child(3){
+    transform: rotate(-45deg);
+  }
+
 }
 
 .logo {
